--- a/book/design/concrete/bridge_beams.ipynb
+++ b/book/design/concrete/bridge_beams.ipynb
@@ -67,30 +67,36 @@
     "\n",
     "## Bridge beams I\n",
     "\n",
-    "### Railbeam structures\n",
     "```{figure} Images/Railbeam_Structures.jpg\n",
+    "\n",
+    "Railbeam structures\n",
     "```\n",
     "\n",
-    "### Box beam structures\n",
     "```{figure} Images/Boxbeam_Structures.jpg\n",
+    "\n",
+    "Box beam structures\n",
     "```\n",
     "\n",
-    "### Solid composite structures\n",
     "```{figure} Images/Solid_Composite_Structures.jpg\n",
+    "\n",
+    "Solid composite structures\n",
     "```\n",
     "\n",
     "## Bridge beams II\n",
     "\n",
-    "### HKPW profile\n",
     "```{figure} Images/HKPW_BridgeBeam.jpg\n",
+    "\n",
+    "HKPW profile\n",
     "```\n",
     "\n",
-    "### HPRP profile\n",
     "```{figure} Images/HPRP_BridgeBeam.jpg\n",
+    "\n",
+    "HPRP profile\n",
     "```\n",
     "\n",
-    "### HKO profile\n",
     "```{figure} Images/HKO_BridgeBeam.jpg\n",
+    "\n",
+    "HKO profile\n",
     "```\n"
    ]
   }
