--- a/book/design/concrete/bubbledeck_floors.ipynb
+++ b/book/design/concrete/bubbledeck_floors.ipynb
@@ -78,19 +78,22 @@
     "Floor strucutre in which hollow spherical elements are placed. Parts of the structure are prefabricated. The possibilities are shown below:\n",
     "\n",
     "```{figure} Images/Bubbledeck4.jpg\n",
-    "```    \n",
     "\n",
     "Reinforcement modules where the spheres are clamped between the two reinforcement layers.\n",
+    "```    \n",
+    "\n",
     "\n",
     "```{figure} Images/Bubbledeck5.jpg\n",
-    "```    \n",
     "\n",
     "Aformentioned reinforcement modules with an additional concrete plate at the bottom side.\n",
-    "\n",
-    "```{figure} Images/Bubbledeck6.jpg\n",
     "```    \n",
     "\n",
-    "Fully or partially casted floor elements.\n"
+    "\n",
+    "```{figure} Images/Bubbledeck6.jpg\n",
+    "\n",
+    "Fully or partially casted floor elements.\n",
+    "```    \n",
+    "\n"
    ]
   },
   {
@@ -107,7 +110,7 @@
     "| BD   | 390                   | ∅315                  | 350                   | 650                                                           | 660                                                           | 10 - 11 |\n",
     "| BD   | 450                   | ∅360                  | 400                   | 740                                                           | 720                                                           | 12 - 14 |\n",
     "\n",
-    "The span is indicated for variable loads of $2.5 kN/m^2$ to $ 4,0 kN/m^2$"
+    "The span is indicated for variable loads of $2.5  kN/m^2$ to $4,0  kN/m^2$"
    ]
   },
   {
@@ -122,17 +125,17 @@
    "metadata": {},
    "source": [
     "```{figure} Images/DetailBubbledeck1.jpg\n",
-    "---\n",
+    "\n",
     "Cross section of a bubble deck floor\n",
     "```    \n",
     "\n",
     "```{figure} Images/DetailBubbledeck2.jpg\n",
-    "---\n",
+    "\n",
     "Support of bubbledeck floor on concrete wall\n",
     "```    \n",
     "\n",
     "```{figure} Images/DetailBubbledeck3.jpg\n",
-    "---\n",
+    "\n",
     "Support of bubble deck floor with cavity wall for residential construction\n",
     "```    "
    ]
