--- a/book/design/concrete/hollow_core_slabs.ipynb
+++ b/book/design/concrete/hollow_core_slabs.ipynb
@@ -24,12 +24,12 @@
     "- Deflection under variable load of max. 0,003 L\n",
     "\n",
     "```{figure} Images/HollowCore1.jpg\n",
-    "---\n",
+    "\n",
     "Hollow core cross-section.\n",
     "```  \n",
     "\n",
     "```{figure} Images/HollowCore2.jpg\n",
-    "---\n",
+    "\n",
     "Hollow core example.\n",
     "```  \n",
     "\n",
@@ -126,12 +126,12 @@
     "### Connections (All types of hollow core slabs)\n",
     "\n",
     "The bearing length ‘a’ should, when a SBR centering strip is used, fulfill the following conditions:\n",
-    "$a = 40 + 0,004 L (floors)$\n",
-    "$a = 30 + 0,004 L (roofs)$\n",
-    "$L = span in mm.$\n",
-    "$a = a_r + a_o$\n",
-    "$a_o = see figure$\n",
-    "$a_r = distance from edge of supporting member to edge of bearing, for a_r, a value no larger than 25 mm can be used. Preferably it is exactly 25 mm.$\n",
+    "$a = 40 + 0,004 L$ (floors)\n",
+    "$a = 30 + 0,004 L$ (roofs)  \n",
+    "$L$ = span in mm.\n",
+    "$a = a_r + a_o$  \n",
+    "$a_o$ = see figure  \n",
+    "$a_r$ = distance from edge of supporting member to edge of bearing, for $a_r$, a value no larger than $25 mm$ can be used. Preferably it is exactly $25 mm$.\n",
     "\n",
     "SBR centering strips centering strips have different functions, depending on their application:\n",
     "- centering the load;\n",
@@ -175,19 +175,21 @@
     "### Connections (All types of hollow core slabs)\n",
     "\n",
     "```{figure} Images/HollowCoreConnections2.jpg\n",
-    "```\n",
     "\n",
     "Support on cavity wall\n",
+    "```\n",
     "\n",
     "```{figure} Images/HollowCoreConnections3.jpg\n",
-    "```\n",
     "\n",
     "For walls separating two houses the hollow cores near voids are filled with mortar, mineral wool of polymer foam.\n",
-    "\n",
-    "```{figure} Images/HollowCoreConnections4.jpg\n",
     "```\n",
     "\n",
+    "\n",
+    "\n",
+    "```{figure} Images/HollowCoreConnections4.jpg\n",
+    "\n",
     "Bearing on console\n",
+    "```\n",
     "\n",
     "## Product specifications Dycore hollow core slabs\n",
     "\n",
@@ -198,7 +200,7 @@
     "| Prestressing Steel| FeP 1860           |  \n",
     "\n",
     "\n",
-    "| Type | Height [mm] | Weight [kN/m²] | Joints [l/m] | Cross Section [mm²] | Filler slabs min. Width [mm] | Max. Length [m] |\n",
+    "| Type | Height $[mm]$ | Weight $[kN/m²]$ | Joints $[l/m]$ | Cross Section $[mm^2]$ | Filler slabs min. Width $[mm]$ | Max. Length $[m]$ |\n",
     "|------|-------------|-----------------|--------------|----------------------|------------------|------------------|\n",
     "| W    | 150         | 2.4             | 4.4          | 0.11                 | 297              | 6                | 5.0              |\n",
     "| N    | 200         | 2.7             | 5.7          | 0.13                 | 643              | 9                | 7.2              |\n",
