--- a/book/design/concrete/reinforcement_tables.ipynb
+++ b/book/design/concrete/reinforcement_tables.ipynb
@@ -11,10 +11,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bending and normal force\n",
-    "```{figure} Images/Brick1.png\n",
-    "```    \n",
-    "\n",
     "## Reinforcement table for bending moments\n",
     "```{figure} Images/Reinforcement_Table1.jpg\n",
     "```\n",
@@ -45,7 +41,7 @@
     "```{figure} Images/Reinforcement_Table3.jpg\n",
     "```\n",
     "\n",
-    "```\n",
+    "```{note}\n",
     "- Strength Class: Represents C20/25 till C45/55.  \n",
     "- Reinforcement Steel: Indicates the reinforcement steel type.  \n",
     "- Quantity: The quantity specified, which in this case is 500.  \n",
@@ -68,7 +64,7 @@
     "a = distance from center of reinforcement to edge of concrete.\n",
     "```\n",
     "\n",
-    "```{figure} Images/Reinforcement_BendingMomentjpg\n",
+    "```{figure} Images/Reinforcement_BendingMoment.jpg\n",
     "```    \n",
     "\n",
     "```{note}\n",
