--- a/book/schedules/phase1.ipynb
+++ b/book/schedules/phase1.ipynb
@@ -28,19 +28,7 @@
    "source": [
     "## Tasks\n",
     "\n",
-    "### 1 Agree on language? > Everyone\n",
-    "\n",
-    "English or Dutch? \n",
-    "\n",
-    "### 2 Agree on table of contents? > Everyone\n",
-    "\n",
-    "This will determine the structure of how we are going to set up the jupyterbook, so we should complete this as soon as possible?\n",
-    "\n",
-    "::::{important}\n",
-    "This determines the structure!\n",
-    "::::\n",
-    "\n",
-    "### 3 What are CC BY 4.0 conditions? > Roel?\n",
+    "### CC BY 4.0 conditions?\n",
     "\n",
     "$\\textit{These are CC BY 4.0 conditions according to from ChatGPT 3.5:}\n",
     "$\n",
@@ -61,32 +49,7 @@
     "\n",
     "By using a CC BY 4.0 license, creators can ensure their work is shared with others in a flexible and open manner while retaining some control over how it's used and attributed. It promotes collaboration, creativity, and the sharing of knowledge across a wide range of contexts.\n",
     "\n",
-    "`````{admonition} Probably we can worry about it later...\n",
-    ":class: tip\n",
-    "But we cannot it publish it now, so should be done before that\n",
-    "`````\n",
-    "\n",
-    "#### Subtask 3.1: Is everything in Quick Reference CC BY 4.0? > Roel / Sander?\n",
-    "\n",
-    "#### Subtask 3.2: Is everything in Quick Reference CC BY 4.0? > Ate?\n",
-    "\n",
-    "### 4 Collaboration online\n",
-    "We work in a TeachBooks repository, later on they can transfer this to location that is visible to students as well. Currently with the URL everyone can find it, but we can later on host is within 1 hour Robert told me, with the help of some TA's.\n",
-    "\n",
-    "#### 4.1 Add everyone as admin on GitHub\n",
-    "Collect usernames or email adresses\n",
-    "\n",
-    "```{note}\n",
-    "Guus kan ook al bewerken!\n",
-    "```\n",
-    "\n",
-    "#### 4.2 Give small instruction on GitHub collaboration\n",
-    "\n",
-    "### 5 Build Interactieve grafiek\n",
-    "\n",
-    "### 6 Build 3d-object\n",
-    "\n",
-    "### 7 Build a small script"
+    "### Replace old images and tables that are conflicting"
    ]
   },
   {
