rain snow images

--- a/book/design_workflow/general_loads/variable_loads_3_rain_snow.ipynb
+++ b/book/design_workflow/general_loads/variable_loads_3_rain_snow.ipynb
@@ -19,7 +19,7 @@
     "and preventing the water from rising above this amount by designing for\n",
     "emergency overflow. Furthermore, always design a roof with a small pitch (general loads, general)\n",
     "\n",
-    "```{figure} Images/Emergency_Overflow1.jpg\n",
+    "```{figure} Images/Emergency_Overflow.jpg\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
@@ -30,6 +30,7 @@
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "Emergency overflow by means of locally lowered parapet\n",
     "```"
    ]
   },
