general drawing images small fix

--- a/book/design_workflow/general_drawing/technical_drawings.ipynb
+++ b/book/design_workflow/general_drawing/technical_drawings.ipynb
@@ -98,7 +98,7 @@
     "on the scale of the drawing. If two components meet which must be hatched in the same way, the hatch is rotated 90°. This is only applicable to\n",
     "hatches consisting of diagonal lines.\n",
     "\n",
-    "```{figure} Images/General_Drawing9.jpg\n",
+    "```{figure} Images/General_Drawing9.png\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
@@ -108,7 +108,7 @@
     "Now the different lines in the drawing need to be given the correct thickness and type. For an overview of the different types and thicknesses and\n",
     "their applications, see the lecture notes on Technical Drawing.\n",
     "\n",
-    "```{figure} Images/General_Drawing10.jpg\n",
+    "```{figure} Images/General_Drawing10.png\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
@@ -118,7 +118,7 @@
     "Finally, if necessary with the aid of leaders, texts are added. Elevation titles need to be placed below the object, aligned to the left. If this\n",
     "particular elevation differs in scale of the rest of the drawing mention this in the elevation title. Do not use abbreviations in titles.\n",
     "\n",
-    "```{figure} Images/General_Drawing11.jpg\n",
+    "```{figure} Images/General_Drawing11.png\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
