cross section indications figures in tables resolved

--- a/book/design_workflow/general_drawing/cross_section_indications.ipynb
+++ b/book/design_workflow/general_drawing/cross_section_indications.ipynb
@@ -20,22 +20,22 @@
     "| No. | Description                           | Hatch                                           | Scale        |              |              |              |              |              |Remarks       |\n",
     "| --- | -----------------------               | -----                                           | -----        | -----        | ----         | ----         | ----         | ----         | ---          |\n",
     "|     |                                       |                                                 | 1:100        |1:50          |1:20          |1:10          |1:5           |1:1           |              | \n",
-    "| 1   | Brick masonry                         |```{figure} Images/Brick1.png```                |:black_circle:|:black_circle:|              |              |              |              |              |\n",
-    "|     |                                       |```{figure} Images/Brick2.png```                |              |:black_circle:|:black_circle:|:black_circle:|:black_circle:|:black_circle:|              |\n",
-    "|     |                                       |```{figure} Images/Brick3.png```                |              |:black_circle:|:black_circle:|:black_circle:|:black_circle:|:black_circle:|              |\n",
-    "| 2   | Stone-like materials                  |```{figure} Images/Stone_Like.png```             |:white_circle:|       |      |        |       |       |e.g. fireproof material, roof tiles |\n",
-    "| 3   | Non-brick masonry                     |```{figure} Images/Non_Brick.png```              |              |       |      |        |       |       |e.g. concrete masonry units    |\n",
-    "| 4   | Non load carrying division walls      |```{figure} Images/Non_Load1.png```               |              |       |      |        |       |       |                          |\n",
-    "|     |                                       |```{figure} Images/Non_Load2.png```             |              |       |      |        |       |       |                          |\n",
-    "|     |                                       |```{figure} Images/Non_Load3.png```             |              |       |      |        |       |       |                          |\n",
-    "| 5   | Reinforced concrete (cast in situ)    |```{figure} Images/Reinforced_Concrete1.png```    |              |       |      |        |       |       |                          |\n",
-    "|     |                                       |```{figure} Images/Reinforced_Concrete2.png```  |              |       |      |        |       |       |                          |\n",
-    "| 6   | Reinforced concrete (precast)         |```{figure} Images/Reinforced_Concrete_Precast.png```|   |       |      |        |       |       |                          |\n",
-    "| 7   | Plain concrete                        |```{figure} Images/Plain_Concrete.png```         |       |       |      |        |       |       |e.g. lightweight concrete |\n",
-    "| 8   | Decorative concrete                   |```{figure} Images/Decorative_Concrete.png```    |       |       |      |        |       |       |                          |\n",
-    "| 9   | Natural stone                         |```{figure} Images/Natural_Stone.png```          |       |       |      |        |       |       |                          |\n",
-    "| 10  | Single floor/wall finishing           |```{figure} Images/Single_Floor_Wall.png```      |       |       |      |        |       |       | e.g. plaster     |\n",
-    "| 11  | Composite floor/wall finishing        |```{figure} Images/Composite.png```              |       |       |      |        |       |       |                          |\n"
+    "| 1   | Brick masonry                         | ![Brick1](Images/Brick1.png) |:black_circle:|:black_circle:|              |              |              |              |              |\n",
+    "|     |                                       | ![Brick2](Images/Brick2.png) |              |:black_circle:|:black_circle:|:black_circle:|:black_circle:|:black_circle:|              |\n",
+    "|     |                                       |![Brick3](Images/Brick3.png)                |              |:black_circle:|:black_circle:|:black_circle:|:black_circle:|:black_circle:|              |\n",
+    "| 2   | Stone-like materials                  | ![Stone_like](Images/Stone_Like.png) |:white_circle:|       |      |        |       |       |e.g. fireproof material, roof tiles |\n",
+    "| 3   | Non-brick masonry                     | ![Non_Brick](Images/Non_Brick.png)|              |       |      |        |       |       |e.g. concrete masonry units    |\n",
+    "| 4   | Non load carrying division walls      |![Non_Load1](Images/Non_Load1.png)               |              |       |      |        |       |       |                          |\n",
+    "|     |                                       |![Non_Load2](Images/Non_Load2.png)             |              |       |      |        |       |       |                          |\n",
+    "|     |                                       |![Non_Load3](Images/Non_Load3.png)             |              |       |      |        |       |       |                          |\n",
+    "| 5   | Reinforced concrete (cast in situ)    |![Reinforced_Concrete1](Images/Reinforced_Concrete1.png)  |              |       |      |        |       |       |                          |\n",
+    "|     |                                       |![Reinforced_Concrete2](Images/Reinforced_Concrete2.png)  |              |       |      |        |       |       |                          |\n",
+    "| 6   | Reinforced concrete (precast)         |![Reinforced_Concrete_Precast](Images/Reinforced_Concrete_Precast.png)|   |       |      |        |       |       |                          |\n",
+    "| 7   | Plain concrete                        |![Plain_Concrete](Images/Plain_Concrete.png)|       |       |      |        |       |       |e.g. lightweight concrete |\n",
+    "| 8   | Decorative concrete                   |![Decorative_Concrete](Images/Decorative_Concrete.png)    |       |       |      |        |       |       |                          |\n",
+    "| 9   | Natural stone                         |![Natural_Stone](Images/Natural_Stone.png)  |       |       |      |        |       |       |                          |\n",
+    "| 10  | Single floor/wall finishing           |![Single_Floor_Wall](Images/Single_Floor_Wall.png)     |       |       |      |        |       |       | e.g. plaster     |\n",
+    "| 11  | Composite floor/wall finishing        |![Composite](Images/Composite.png)              |       |       |      |        |       |       |                          |\n"
    ]
   },
   {
@@ -52,12 +52,12 @@
     "|No.| Description                        | Hatch                                | Scale        |              |              |              |              |              |Remarks       |\n",
     "|---| -----------------------            | -----                                | -----        | -----        | ----         | ----         | ----         | ----         | ---          |\n",
     "|   |                                    |                                      | 1:100        |1:50          |1:20          |1:10          |1:5           |1:1           |              | \n",
-    "|12 | Softwood                           |```{figure} Images/Softwood.png```     |       |       |      |        |       |       |                          |\n",
-    "|13 | Hardwood                           |```{figure} Images/Hardwood.png```      |       |       |      |        |       |       |                          |\n",
-    "|14 | Softwood/Hardwood (along the grain)|```{figure} Images/Soft_Hardwood_Along_The_Grain.png```       |       |       |      |        |       |       |                          |\n",
-    "|15 | Glued seam                         |```{figure} Images/Glued_Seam.png```    |       |       |      |        |       |       |                          |\n",
-    "|16 | Cladding panel                     |```{figure} Images/Cladding_Panel.png```     |       |       |      |        |       |       |                          |\n",
-    "|17 | Isolation panel                    |```{figure} Images/Isolation_Panel.png```    |       |       |      |        |       |       |                          |"
+    "|12 | Softwood                           |![Softwood](Images/Softwood.png)     |       |       |      |        |       |       |                          |\n",
+    "|13 | Hardwood                           |![Hardwood](Images/Hardwood.png)      |       |       |      |        |       |       |                          |\n",
+    "|14 | Softwood/Hardwood (along the grain)|![Soft_Hardwood_Along_The_Grain](Images/Soft_Hardwood_Along_The_Grain.png)       |       |       |      |        |       |       |                          |\n",
+    "|15 | Glued seam                         |![Glued_Seam](Images/Glued_Seam.png)       |       |       |      |        |       |       |                          |\n",
+    "|16 | Cladding panel                     |![Cladding_Panel](Images/Cladding_Panel.png)     |       |       |      |        |       |       |                          |\n",
+    "|17 | Isolation panel                    |![Isolation_Panel](Images/Isolation_Panel.png)    |       |       |      |        |       |       |                          |"
    ]
   },
   {
@@ -74,10 +74,10 @@
     "| No. | Description                   | Hatch                           | Scale |              |              |              |              |              |Remarks       |\n",
     "| --- | -----------------------       | -----                           | ----- | -----        | ----         | ----         | ----         | ----         | ---          |\n",
     "|     |                               |                                 | 1:100 |1:50          |1:20          |1:10          |1:5           |1:1           |              | \n",
-    "| 18  | Steel                         |```{figure} Images/Steel.png```|       |       |      |        |       |       |                          |\n",
-    "| 19  | Aluminium, brass, copper etc. |```{figure} Images/Aluminium.png```|       |       |      |        |       |       |                          |\n",
-    "| 20  | Lead                          |```{figure} Images/Lead.png```|       |       |      |        |       |       |                          |\n",
-    "| 21  | Zinc                          |```{figure} Images/Zinc.png```|       |       |      |        |       |       |                          |"
+    "| 18  | Steel                         |![Steel](Images/Steel1.png)|       |       |      |        |       |       |                          |\n",
+    "| 19  | Aluminium, brass, copper etc. | ![Aluminium](Images/Aluminium.png)|       |       |      |        |       |       |                          |\n",
+    "| 20  | Lead                          |![Lead](Images/Lead.png)|       |       |      |        |       |       |                          |\n",
+    "| 21  | Zinc                          |![Zinc](Images/Zinc.png)|       |       |      |        |       |       |                          |"
    ]
   },
   {
@@ -94,14 +94,14 @@
     "| No. | Description    | Hatch                                 | Scale |       |      |              |              |              |Remarks       |\n",
     "| --- | -------------- | -----                                 | ----- | ----- | ---- | ----         | ----         | ----         | ---          |\n",
     "|     |                |                                       | 1:100 |1:50   |1:20  |1:10          |1:5           |1:1           |              | \n",
-    "| 22  | Synthetics     |```{figure} Images/Synthetics.png```   |       |       |      |        |       |       |                          |\n",
-    "| 23  | Sealant        |```{figure} Images/Sealant.png```      |       |       |      |        |       |       |                          |\n",
-    "| 24  | Foil, bitumen  |```{figure} Images/Foil.png```         |       |       |      |        |       |       |                          |\n",
-    "| 25  | Ground level   |```{figure} Images/Gorund_Level.png``` |       |       |      |        |       |       |                          |\n",
-    "| 26  | Sand           |```{figure} Images/Sand.png```         |       |       |      |        |       |       |                          |\n",
-    "| 27  | Gravel         |```{figure} Images/Gravel.png```       |       |       |      |        |       |       |                          |\n",
-    "| 28  | Water          |```{figure} Images/Water.png```        |       |       |      |        |       |       |                          |\n",
-    "| 29  | Glass          |```{figure} Images/Glass.png```        |       |       |      |        |       |       |                          |"
+    "| 22  | Synthetics     | ![Synthetics](Images/Synthetics.png)   |       |       |      |        |       |       |                          |\n",
+    "| 23  | Sealant        | ![Sealant](Images/Sealant.png)      |       |       |      |        |       |       |                          |\n",
+    "| 24  | Foil, bitumen  | ![Foil](Images/Foil.png)         |       |       |      |        |       |       |                          |\n",
+    "| 25  | Ground level   | ![Ground_Level](Images/Ground_Level.png) |       |       |      |        |       |       |                          |\n",
+    "| 26  | Sand           | ![Sand](Images/Sand.png)         |       |       |      |        |       |       |                          |\n",
+    "| 27  | Gravel         | ![Gravel](Images/Gravel.png)      |       |       |      |        |       |       |                          |\n",
+    "| 28  | Water          | ![Water](Images/Water.png)     |       |       |      |        |       |       |                          |\n",
+    "| 29  | Glass          | ![Glass](Images/Glass.png)      |       |       |      |        |       |       |                          |"
    ]
   }
  ],
