scale sign changed

--- a/book/design_workflow/general_drawing/cross_section_indications.ipynb
+++ b/book/design_workflow/general_drawing/cross_section_indications.ipynb
@@ -8,10 +8,26 @@
     "\n",
     "For each material, a different hatch is used. Furthermore, the type of hatch can differ as the scale of the drawing\n",
     "changes. This is done to make sure that at higher scales the hatches are not too complicated, as the areas to\n",
-    "hatch on the drawing decrease rapidly with increasing scale. In the tables below two markings appear:  \n",
-    "  \n",
-    ":black_circle: = Scale at which the hatch needs to be used  \n",
-    ":white_circle: = Scale at which the hatch needs to be used with the material added in text\n",
+    "hatch on the drawing decrease rapidly with increasing scale. \n",
+    "\n",
+    "````{Note}\n",
+    "In the tables below two markings appear:\n",
+    "```{figure} Images/black_circle.png\n",
+    "---\n",
+    "align: left\n",
+    "scale: 200%\n",
+    "---\n",
+    "Scale at which the hatch needs to be used\n",
+    "```\n",
+    "```{figure} Images/grey_circle.png\n",
+    "---\n",
+    "align: right\n",
+    "scale: 200%\n",
+    "---\n",
+    "Scale at which the hatch needs  \n",
+    " to be used with the material added in text\n",
+    "```\n",
+    "````\n",
     "  \n",
     "The tables are based on the Dutch code NEN 47.\n",
     "\n",
@@ -20,11 +36,11 @@
     "| No. | Description                           | Hatch                                           | Scale        |              |              |              |              |              |Remarks       |\n",
     "| --- | -----------------------               | -----                                           | -----        | -----        | ----         | ----         | ----         | ----         | ---          |\n",
     "|     |                                       |                                                 | 1:100        |1:50          |1:20          |1:10          |1:5           |1:1           |              | \n",
-    "| 1   | Brick masonry                         | ![Brick1](Images/Brick1.png) |:black_circle:|:black_circle:|              |              |              |              |              |\n",
-    "|     |                                       | ![Brick2](Images/Brick2.png) |              |:black_circle:|:black_circle:|:black_circle:|:black_circle:|:black_circle:|              |\n",
-    "|     |                                       |![Brick3](Images/Brick3.png)                |              |:black_circle:|:black_circle:|:black_circle:|:black_circle:|:black_circle:|              |\n",
-    "| 2   | Stone-like materials                  | ![Stone_like](Images/Stone_Like.png) |:white_circle:|       |      |        |       |       |e.g. fireproof material, roof tiles |\n",
-    "| 3   | Non-brick masonry                     | ![Non_Brick](Images/Non_Brick.png)|              |       |      |        |       |       |e.g. concrete masonry units    |\n",
+    "| 1   | Brick masonry                         | ![Brick1](Images/Brick1.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) |              |              |              |              |              |\n",
+    "|     |                                       | ![Brick2](Images/Brick2.png) |              | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) |              |\n",
+    "|     |                                       |![Brick3](Images/Brick3.png)                |              | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) |              |\n",
+    "| 2   | Stone-like materials                  | ![Stone_like](Images/Stone_Like.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) |e.g. fireproof material, roof tiles |\n",
+    "| 3   | Non-brick masonry                     | ![Non_Brick](Images/Non_Brick.png)| ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) |e.g. concrete masonry units    |\n",
     "| 4   | Non load carrying division walls      |![Non_Load1](Images/Non_Load1.png)               |              |       |      |        |       |       |                          |\n",
     "|     |                                       |![Non_Load2](Images/Non_Load2.png)             |              |       |      |        |       |       |                          |\n",
     "|     |                                       |![Non_Load3](Images/Non_Load3.png)             |              |       |      |        |       |       |                          |\n",
